--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!-- Write your code here! -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Introduction to the DOM Lab</title>
+</head>
+<body>
+    <table>
+        <h1>My HTML adventure</h1>
+        <p>Learn HTML<a href="https://developer.mozilla.org/en-US/docs/Web/HTML">here.</a>is awesome. HTML is a <strong>MarkUp</strong> language. It is <em>fun</em></p>
+    </table>
+</body>
+</html>
